--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -14,8 +14,7 @@
     --colorTextoPeligro: #f04f5e;
     --colorTextoPeligroHover: #b91020;
     --colorTextoOscuro: #86aeef;
-    --colorTextoAlerta: #664d03;
-    --fondoAlerta: #fff3cd;
+    --fondoAlerta: #574200;
     --colorTextoBien: #011a11;
     --fondoBien: #035637;
     --colorTextoDlc: #edddf0;
