--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -62,7 +62,7 @@
 						<i class="fa-solid fa-arrow-left"></i>
 					</button>
 
-					<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" style="text-decoration: none;" target="_blank">
+					<a href="@Herramientas.EnlaceAcortador.Generar(bundleSeleccionado.Enlace, bundleSeleccionado.Tipo)" style="text-decoration: none; width: 100%; color: var(--colorEnlace);" target="_blank">
 						<div style="display: flex; align-items: center; flex-direction: row;">
 							<div style="height: 60px; padding-left: 40px; padding-right: 20px;">
 								<img src="@Bundles2.BundlesCargar.DevolverBundle(bundleSeleccionado.Tipo).ImagenTienda" style="height: 100%;" />
@@ -78,6 +78,10 @@
 							</div>
 						</div>
 					</a>
+
+					<a href="/bundle?id=@bundleSeleccionado.Id" class="boton-pequeño" style="width: 70px; text-align: center; font-size: 20px; background-color: transparent; color: var(--colorEnlace);">
+						<i class="fa-solid fa-link"></i>
+					</a>					
 				</div>
 
 				@if (bundleSeleccionado.Tiers.Count > 0)
@@ -149,6 +153,16 @@
 									{
 										fondoColor = "background-color: var(--fondoBien);";
 										tooltip = Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String13");
+									}
+									else
+									{
+										bool usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
+
+										if (usuarioTieneDeseado == true)
+										{
+											fondoColor = "background-color: var(--fondoAlerta);";
+											tooltip = Herramientas.Idiomas.CogerCadena(idioma, "Bundles.String16");
+										}
 									}
 
 									<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent; position: relative; @fondoColor" title="@tooltip">
