--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -1365,7 +1365,7 @@
 			{
 				if (j1 != null && j2 != null)
 				{
-					return j2.FechaEmpieza.CompareTo(j1.FechaEmpieza);
+					return j2.FechaTermina.CompareTo(j1.FechaTermina);
 				}
 				else
 				{
